--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#">
-                <img src="img/logo.svg" class="icon-logo"> CAMIFUCOS
+                <img src="img/logo.png" class="icon-logo"> CAMIFUCOS
               </a>
             </div>
             <div class="navbar-collapse collapse">
