added logo stamp to all pages

--- a/about.html
+++ b/about.html
@@ -32,8 +32,6 @@
   </head>
   <body>
       <div class="navbar-wrapper">
-      <div class="container">
-
         <div class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
@@ -43,7 +41,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#">
-                <img src="img/logo.png" class="icon-logo"> CAMIFUCOS
+                <!-- <img src="img/logo.png" class="icon-logo"> --> CAMIFUCOS
               </a>
             </div>
             <div class="navbar-collapse collapse">
@@ -55,12 +53,11 @@
             </div>
           </div>
         </div>
-      </div>
     </div>
     <div class="container section">
       <div class= "row">
-        <div class = "col-md-3">
-          <div class= "well">
+        <div class = "col-md-3 text-center">
+          <div class= "well text-left">
             <strong>contact:</strong> 79 99 44 41
             <br>
             <br>
@@ -70,6 +67,7 @@
             Cameroon, West Africa
             <br>
           </div>
+          <img style="height:300px" src="img/logo-green.png"> 
         </div>
         <div class= "col-md-9">
           <h1 style="margin-top:0;">LEGAL  INSTRUMENT</h1>
