--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
 
   <body>
     <div class="navbar-wrapper">
-      <div class="container">
-
         <div class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
@@ -44,7 +42,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#">
-                <img src="img/logo.png" class="icon-logo"> CAMIFUCOS
+                <!-- <img src="img/logo.png" class="icon-logo"> --> CAMIFUCOS
               </a>
             </div>
             <div class="navbar-collapse collapse">
@@ -73,10 +71,10 @@
         <div class="item active" style=""> 
           <div class="container"> 
               <div class="row"> 
-                <div class="col-md-5 carousel-text-box"> 
+                <div class="col-md-5 carousel-text-box text-center"> 
                   
                   <h1 class="carousel-text">Farmers' way forward</h1> 
-                  
+                  <img style="height:300px" src="img/logo-cream.png"> 
                 </div> 
                 <div class="col-md-7"> 
                   <img class="img-small img-thumbnail" src="img/100_0972.JPG"> 
