--- a/team.html
+++ b/team.html
@@ -32,9 +32,7 @@
   </head>
 
   <body>
-       <div class="navbar-wrapper">
-      <div class="container">
-
+    <div class="navbar-wrapper">
         <div class="navbar navbar-inverse navbar-fixed-top">
           <div class="container">
             <div class="navbar-header">
@@ -44,7 +42,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#">
-                <img src="img/logo.png" class="icon-logo"> CAMIFUCOS
+                <!-- <img src="img/logo.png" class="icon-logo"> --> CAMIFUCOS
               </a>
             </div>
             <div class="navbar-collapse collapse">
@@ -56,12 +54,11 @@
             </div>
           </div>
         </div>
-      </div>
     </div>
    <div class="container section">
       <div class= "row">
-        <div class = "col-md-3">
-           <div class= "well">
+        <div class = "col-md-3 text-center">
+           <div class= "well text-left">
             <strong>contact:</strong> 79 99 44 41
             <br>
             <br>
@@ -71,7 +68,7 @@
             Cameroon, West Africa
             <br>
           </div>
-          <div class= "well">
+          <div class= "well text-left">
             <h4><strong>AIMS and OBJECTIVES</strong></h4>
             <p style="font-size:.8em;">
               CAMIFUCOS sets a path that leads thousands of its members into the 21st century by:
@@ -87,6 +84,7 @@
               </ul>
             </p>
           </div>
+          <img style="height:300px" src="img/logo-green.png">
         </div>
         <div class= "col-md-9">
       
