added job titles to team page and changed logo image

--- a/team.html
+++ b/team.html
@@ -68,13 +68,12 @@
             Cameroon, West Africa
             <br>
           </div>
-          <div class= "well text-left">
+          <!-- <div class= "well text-left">
             <h4><strong>AIMS and OBJECTIVES</strong></h4>
             <p style="font-size:.8em;">
               CAMIFUCOS sets a path that leads thousands of its members into the 21st century by:
               <ul style="font-size:.8em;">
                 <li>more sustainable, competitive, and equitable economic development</li>
-               <!--  <li>change in which the exploitation of resources and direction of investments</li> -->
                 <li>orientation of technological development</li>
                 <li>institutional change  and framework development</li>
                 <li>income-generating capacity-building projects</li>
@@ -83,7 +82,7 @@
                 <li>environmentally sound crop farming practices with major restriction on the use of chemical fertilizers</li>
               </ul>
             </p>
-          </div>
+          </div> -->
           <img style="height:300px" src="img/logo-green.png">
         </div>
         <div class= "col-md-9">
@@ -91,14 +90,14 @@
       
       <div class="row">
         <div class="col-lg-6"> 
-          <div class="row">
+          <div class="row profile">
             <div class="col-lg-3">
               <img class=" img img-profile img-circle" src="img/cor.jpg">
             </div>
             <div class="col-md-9">
               <div class="text">
-                <h2>Director/Scientist</h2>
-                <p class=""></p>
+                <h2>Director General</h2>
+                <h4 class="">Dr. / Scientist Isaac Ngwa Chenni</h4>
                 <p></p>
               </div>
             </div>
@@ -113,14 +112,14 @@
        
     <div class="row">
         <div class="col-lg-6">
-          <div class="row">
+          <div class="row profile">
             <div class="col-lg-3">
               <img class=" img img-profile img-circle" src="img/sec.jpg">
             </div>
             <div class="col-lg-9">
               <div class="text">
                 <h2>Secretary General</h2>
-                <p class=""></p>
+                <h4 class="">Marcus Kejungki</h4>
                 <p></p>
               </div>
             </div>
@@ -128,14 +127,14 @@
         </div>
 
         <div class="col-lg-6">
-          <div class="row">
+          <div class="row profile">
             <div class="col-lg-3">
               <img class="img img-profile img-circle" src="img/social-affairs.jpg">
             </div>
             <div class="col-lg-9">
               <div class="text">
                 <h2>Social Affairs</h2>
-                <p class=""></p>
+                <h4 class="">Mrs. Weyen Regina Ngwafor</h4>
                 <p></p>
               </div>
             </div>
@@ -147,13 +146,13 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <div class="row">
+          <div class="row profile">
           <div class="col-lg-3"> <img class=" img img-profile img-circle" src="img/ch.jpg"></div>
 
           <div class="col-lg-9">
              <div class="text">
             <h2>Patron/Adviser </h2>
-            <p class=""></p>
+            <h4 class="">His Royal Majesty Sehm Mbinglo II</h4>
             <p></p>
           </div>
           </div>
@@ -163,14 +162,14 @@
         </div><!-- /.col-lg-4 -->
 
         <div class="col-lg-6">
-          <div class="row">
+          <div class="row profile">
             <div class="col-lg-3">
               <img class="img img-profile img-circle" src="img/board-chairperson.jpg">
             </div>
             <div class="col-lg-9">
               <div class="text">
                 <h2>Board Chairperson</h2>
-                <p class=""></p>
+                <h4 class="">His Royal Highness Chief Mbonifor I.N.N</h4>
                 <p></p>
               </div>
             </div>
